--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
   "name": "rebuilding-mern-server---udemy-react-course",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gignupg/Rebuilding-MERN-Server---Udemy-React-Course.git"
+    "url": "git+https://github.com/gignupg/gignupg-Rebuilding-MERN-Server---Udemy-React-Course.git"
   },
   "author": "Linus Komnick",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/gignupg/Rebuilding-MERN-Server---Udemy-React-Course/issues"
+    "url": "https://github.com/gignupg/gignupg-Rebuilding-MERN-Server---Udemy-React-Course/issues"
   },
-  "homepage": "https://github.com/gignupg/Rebuilding-MERN-Server---Udemy-React-Course#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  },
+  "homepage": "https://github.com/gignupg/gignupg-Rebuilding-MERN-Server---Udemy-React-Course#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.7"
-  },
-  "description": ""
+    "mongoose": "^5.10.9",
+    "nodemon": "^2.0.5"
+  }
 }
